apps/threadfin/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: threadfin-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`threadfin.sobrinho.pt`)
      kind: Rule
      services:
        - name: threadfin
          port: main
